--- a/conflict.html
+++ b/conflict.html
@@ -1,2 +1,2 @@
-This is a line we should both alter, in order to force a merge conflict and now it has.
+This is a line we should both alter, in order to force a merge conflict and now it has. Done!
 Then we have to resolve the conflict.
